z-index for nav fixed

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -62,8 +62,8 @@ nav {
   text-align: center;
   position: fixed;
   width: 100%;
-  z-index: 1;
   margin: 0;
+  z-index: 999;
   ul {
     list-style-type: none;
     padding: 0;
@@ -546,6 +546,7 @@ footer {
 }
 
 @media (max-width: 880px) {
+
   nav ul, nav li, .home-section {
     display: block;
   }
